--- a/prizes.css
+++ b/prizes.css
@@ -16,9 +16,6 @@
 .fonts{
   font-family:georgia;
 }
-.medal{
-    align:right;
-}
 @media (max-width:992px){
     .prize{
         font-size:25px;
